--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.2.1",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "cache-manager": "^5.4.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "@nestjs/common": "10.3.2",
+    "@nestjs/core": "10.3.2",
+    "@nestjs/platform-express": "10.3.2",
+    "cache-manager": "5.4.0",
+    "reflect-metadata": "0.2.1",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "10.3.2",
+    "@nestjs/schematics": "10.1.1",
+    "@nestjs/testing": "10.3.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
